# cc-benchmark

./: .gitignore  ARCHITECTURE.md  EXTERNAL_REFS.md  SWE_EVALUATION.md  debug_single_run.py  main.py  plugin-benchmark-tdd.md  pyproject.toml  test-run.yaml
cc_benchmark/: __init__.py  agent.py  cli.py  config.py  dataset.py  evaluation.py  images.py  metrics.py  plugins.py  prompts.py  protocol.py  reporter.py  runner.py  test_run.py  validator.py
cc_benchmark/docker/: Dockerfile  docker_agent.py
cc_benchmark/templates/: README.md  system_prompt.j2  user_message.j2
cc_benchmark/tui/: __init__.py  app.py  progress.py  styles.py  wizard.py
examples/: experiment.yaml
scripts/: __init__.py  bench.py  benchmark.py  build.py  single_run.py
swe_bench_harness/: __init__.py  agent.py  cli.py  config.py  dataset.py  evaluation.py  metrics.py  plugins.py  protocol.py  reporter.py  runner.py  validator.py
swe_bench_harness/docker/: Dockerfile  docker_agent.py  requirements.txt
swe_bench_harness/templates/: report.html
tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_dataset.py  test_metrics.py  test_reporter.py  test_runner.py
